# Charlie2DEditor

./: .gitignore  CMakeLists.txt  compile_commands.json  fancyrun.sh  minimal.html  sharedHeader.h  webbuild.sh
EngineWatchdog/: CMakeLists.txt  build.sh  imgui.ini
EngineWatchdog/src/: main.cpp
TempProject/: EditorData.json
TempProject/img/Scenes/: main.ch2d
engine/: CMakeLists.txt  Project.ch2dscene  README.md  compile_commands.json  fancyrun.sh  imgui.ini  prevProject.txt
engine/.cache/clangd/index/: abi_macros.hpp.778FE46A0D771212.idx  adl_serializer.hpp.4D87177A7CA262E3.idx  begin.hpp.5AEB469DA27BAF95.idx  binary_reader.hpp.BB0BAD05F9B2D629.idx  binary_writer.hpp.5322A8838A7C0C97.idx  byte_container_with_subtype.hpp.0077F2FE32532B6E.idx  cpp_future.hpp.9565C9581B10DFDC.idx  detected.hpp.9B8AA02583A798D4.idx  end.hpp.2630DDF9FC7CF4D0.idx  exceptions.hpp.4B7936377EAC5809.idx  from_json.hpp.4828F9AF6CA6D007.idx  hash.hpp.B692B1C15A6EE2DB.idx  hedley.hpp.49B7D71F3771F021.idx  hedley_undef.hpp.B068E749BE3FE544.idx  identity_tag.hpp.156211DCF9FEAB5D.idx  imguiDataPanels.h.ADCF35A16C3B5ACC.idx  imguiTheme.h.9CE1243A19EFBA9E.idx  include_tmp.h.A850E91002CA0F7E.idx  input_adapters.hpp.FD592D6DD2C3936E.idx  internal_iterator.hpp.2D50AC30278C36BB.idx  is_sax.hpp.08316FB4072C9656.idx  iter_impl.hpp.693D72A7144585ED.idx  iteration_proxy.hpp.94F15968B139EB27.idx  iterator_traits.hpp.F45DA39602E1FDA8.idx  json.hpp.98C2ED8B66F950F3.idx  json_fwd.hpp.F84408157787B696.idx  json_pointer.hpp.57ADE18665C3EF97.idx  json_ref.hpp.29142C880B32D548.idx  json_reverse_iterator.hpp.53493DE6CD8ADF2B.idx  json_sax.hpp.8AF92240600DDE8E.idx  lexer.hpp.1D073375E599F7A8.idx  macro_scope.hpp.A8DB264FC344BD39.idx  macro_unscope.hpp.F19C472E04CB52E2.idx  main.cpp.7717E32BF8D0B573.idx  move.h.E2866B7CA30D3733.idx  ordered_map.hpp.C845FC867136FA6D.idx  output_adapters.hpp.9513E5708593E7D3.idx  parser.hpp.49FE415AB7EE43B0.idx  position_t.hpp.30C68AD92A2F5112.idx  primitive_iterator.hpp.C08EA7EA92D1DDF0.idx  (+9 more)
engine/include/: include_tmp.h
engine/src/: ImguiPanels.cpp  ImguiPanels.h  SimplePanel.h  functionUtils.cpp  functionUtils.h  imguiDataPanels.h  imguiTheme.h  main.cpp  move.h  move2.cpp  move2.h
include/: include_tmp.h
shared/: .syncthing.sharedHeader.h.tmp  sharedHeader.h
src/: .syncthing.imguiDataPanels.h.tmp  .syncthing.main.cpp.tmp  .syncthing.main.sync-conflict-20240318-174526-Z6ENONT.cpp.tmp  imguiDataPanels.h  imguiTheme.h  main.cpp  move.h
